@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: ????
-  Changes:
+  Features:
+    - Add preset for Nullius (Thanks to Anachrony's help).
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2022-02-20
